add latex chapter 2

--- a/Calculus_Solution_latex/Calculus_Solution.tex
+++ b/Calculus_Solution_latex/Calculus_Solution.tex
@@ -28,7 +28,10 @@
 
 \pagestyle{empty}
 
+\setcounter{tocdepth}{1}
 \tableofcontents
+
+\chapterimage{style/chapter.pdf}
 
 \include{chapters/chapter1}
 \include{chapters/chapter2}
