update part 2 and 3 in latex format

--- a/Calculus_Solution_latex/Calculus_Solution.tex
+++ b/Calculus_Solution_latex/Calculus_Solution.tex
@@ -28,12 +28,14 @@
 
 \pagestyle{empty}
 
-\setcounter{tocdepth}{1}
+\setcounter{tocdepth}{0}
 \tableofcontents
 
 \chapterimage{style/chapter.pdf}
 
-\include{chapters/chapter1}
-\include{chapters/chapter2}
+\include{parts/part1}
+\include{parts/part2}
+\include{parts/part3}
+\include{parts/part4}
 
 \end{document}
