--- a/Calculus_Solution_latex/Calculus_Solution.tex
+++ b/Calculus_Solution_latex/Calculus_Solution.tex
@@ -33,9 +33,10 @@
 
 \chapterimage{style/chapter.pdf}
 
-\include{parts/part1}
-\include{parts/part2}
-\include{parts/part3}
-\include{parts/part4}
+% \include{parts/part1}
+% \include{parts/part2}
+% \include{parts/part3}
+% \include{parts/part4}
+\include{parts/part5}
 
 \end{document}
