--- a/Calculus_Solution_latex/parts/part1.tex
+++ b/Calculus_Solution_latex/parts/part1.tex
@@ -609,7 +609,8 @@ We can switch between any two bases easily by using the formula: \\
 \end{theorem}
 
 \begin{exercise}\nonumber
-	Proof \\
+	Proof
+	
 	\begin{gather*}
 		\because y = log_a(x) \leftrightarrow a^y = x \\
 		\begin{align}
@@ -625,14 +626,12 @@ We can switch between any two bases easily by using the formula: \\
 \begin{exercise}\nonumber
 	Convert $ log_4(x) $ into a logarithm with each of the following bases. \\
 
-	(a) base 3 \\
-
+	(a) base 3
 	$$
 		log_3(x) = {log_4(x) \over log_4{3}}
 	$$
 
-	(b) base 22 \\
-
+	(b) base 22
 	$$
 		log_{22}(x) = {log_4(x) \over log_4(22)}
 	$$
